--- a/main.scss
+++ b/main.scss
@@ -23,17 +23,16 @@ header {
   justify-content: space-between;
   align-items: center;
   min-height: 10vh;
-  padding: 0px;
+  padding: 0rem;
   padding-left: 2rem;
 }
 
 .logo {
-  font-size: 26px;
-  flex: 1 1 auto;
+  font-size: 2.75rem;
   color: white;
   font-family: "Barlow";
-  font-weight: 600;
-  font-size: 26px;
+  font-weight: 800;
+
 }
 nav ul {
   display: flex;
@@ -87,8 +86,202 @@ nav ul li a {
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    flex: 1 1 350px;
+    img{
+      height: 100%;
+    }
   }
 
 .info-part{
-  
+  flex: 1 1 350px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  article{
+    width: 60%;
+    margin: 0 auto;
+    h2{
+      font-family: "Fraunces";
+      font-size: 40px;
+      font-weight: 900;
+      color: hsl(212, 27%, 19%);
+    }
+    p{
+      margin: 40px 0;
+      line-height: 1.5;
+      font-size: 18px;
+      color: hsl(232, 10%, 55%);
+    }
+    a{
+      font-weight: bold;
+      font-size: 16px;
+      color: black;
+      text-transform: uppercase;
+      letter-spacing: 1px;
+      font-family: 'Times New Roman', Times, serif;
+    }
+  }
+}
+
+
+.graphic-design{
+  display: flex;
+  .image-containers{
+    flex: 1 1 350px;
+    display: flex;
+    position: relative;
+  }
+  img{
+    object-fit: cover;
+  }
+  div{
+    position: absolute;
+    width: 100%;
+    bottom: 10%;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    h4{
+      font-family: "Fraunces";
+      font-weight: 900;
+      font-size: 1.75rem;
+      
+    }
+    p{
+      width: 50%;
+      text-align: center;
+      margin: 0;
+      font-size: 1rem;
+      font-weight: 600;
+      padding-left: 4rem;
+      padding-right: 4rem;
+      font-family: 'Barlow';
+      opacity: 0.7;
+  }
+ }
+}
+
+#graphic{
+  color: hsl(167, 40%, 24%);
+}
+#photo{
+  color: hsl(198, 62%, 26%);
+}
+
+
+.testimonials{
+  width: 100%;
+  min-height: 100vh;
+  background-color: #FFFBF8;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.testimonial-container{
+  width: 90%;
+  margin: 0 auto;
+  padding: 30px 0;
+  h3{
+      text-align: center;
+      color: hsl(210, 4%, 67%);
+      font-size: 26px;
+      margin-bottom: 50px;
+      text-transform: uppercase;
+      font-family: 'Barlow';
+  }
+}
+.testimonial-cards{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-wrap: wrap;
+}
+.testimonial-card{
+  display: flex;
+  flex-direction: column;
+  flex: 1 1 350px;
+  justify-content: center;
+  align-items: center;
+  padding: 10px;
+  margin-bottom: 60px;
+  p{
+      margin: 40px;
+      text-align: center;
+      color: hsl(232, 10%, 55%);
+      line-height: 1.5;
+      font-size: 16px;
+      font-family: 'Barlow';
+  }
+
+  h4{
+      font-family: "Fraunces";
+      font-weight: 900;
+      font-size: 1.5rem;
+      margin-bottom: 5px;
+      text-align: center;
+      color: hsl(212, 27%, 19%);
+  }
+  h5{
+      font-size: 14px;
+      color: hsl(210, 4%, 67%);
+      text-transform: capitalize;
+      text-align: center;
+      margin-top: 1px;
+  }
+  img{
+      width: 80px;
+      height: 80px;
+      border-radius: 50%;
+  }
+}
+
+.images{
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  background-color: #90d4c5;
+}
+
+.footer{
+  min-height: 30vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background-color: #90d4c5;
+  h1{
+    color: hsl(167, 40%, 24%);
+    margin-bottom: 1rem;
+  }
+  ul{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    list-style: none;
+    padding-left: 0px;
+    margin-bottom: 0px;
+    li{
+      padding: 20px;
+      a{
+        color: #287160;
+        font-size: 16px;
+        font-weight: 600;
+        font-family: "Barlow";
+        text-decoration: none;
+        padding-top: 0px;
+      }
+    }
+  }
+  ul{
+    .social-icons{
+      padding: 0px;
+      display: flex;
+      justify-content: center;
+      li{
+        padding: 1rem;
+      }
+    }
+  }
 }
